@@ -44,6 +44,11 @@ public class REPLViewPreferencePage extends FieldEditorPreferencePage implements
     			Messages.REPLViewPreferencePage_displayHint, 
     			getFieldEditorParent()));
 
+        addField(new BooleanFieldEditor(
+                ccw.preferences.PreferenceConstants.REPL_VIEW_PPRINT_RESULT,
+                Messages.REPLViewPreferencePage_pprintResult,
+                getFieldEditorParent()));
+
     }
 
     public void init(IWorkbench workbench) {
