@@ -72,6 +72,7 @@ SyntaxColoringPreferencePage_replLogError=REPL Log - error
 SyntaxColoringPreferencePage_preview=Preview:
 REPLViewPreferencePage_activate_autoEval_on_Enter=Trailing [Enter] sends valid REPL content
 REPLViewPreferencePage_displayHint=Show hints (input area's top right corner, input area placeholder)
+REPLViewPreferencePage_pprintResult=Use pprint (if available) for displaying evaluation result
 
 REPLHistoryPreferencePage_max_size=Maximum REPL history size:
 REPLHistoryPreferencePage_persist_schedule=REPL history persistence schedule [ms]:
